Fix input alignment

--- a/front-end/src/css/App.css
+++ b/front-end/src/css/App.css
@@ -206,6 +206,8 @@ input[type='range']::-webkit-slider-thumb {
     font-weight: bold;
     background-color: var(--white);
     height: 50px;
+    margin-top: 1px;
+    margin-right: 1px;
 }
 
 .room-right {
